<!--

    Copyright (c) 2022 TerraFrame, Inc. All rights reserved.

    This file is part of Geoprism Registry(tm).

    Geoprism Registry(tm) is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    Geoprism Registry(tm) is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public
    License along with Geoprism Registry(tm).  If not, see <http://www.gnu.org/licenses />.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.geoprism</groupId>
  <artifactId>georegistry</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>GeoRegistry</name>
  <description>Geoprism's Geo-ontological hierarchy registry</description>

  <modules>
    <module>georegistry-adapter/java/common</module>
    <module>dhis2adapter</module>
    <module>georegistry-server</module>
    <module>georegistry-web</module>
  </modules>

  <properties>
    <geoprism.version>0.11.16</geoprism.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <aspectj.version>1.8.6</aspectj.version>
    <aspectj.plugin.version>1.7</aspectj.plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>[4.13.1,)</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <repositories>
    <repository>
      <id>central</id>
      <name>central</name>
      <url> https://repo1.maven.org/maven2/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>terraframe-public</id>
      <url>https://dl.cloudsmith.io/public/terraframe/public/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>terraframe-runwaysdk</id>
      <url>https://dl.cloudsmith.io/public/terraframe/runwaysdk/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>terraframe-geoprism</id>
      <url>https://dl.cloudsmith.io/public/terraframe/geoprism/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>terraframe-geoprism-registry</id>
      <url>https://dl.cloudsmith.io/public/terraframe/geoprism-registry/maven/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>cloudsmith</id>
      <url>https://maven.cloudsmith.io/terraframe/geoprism-registry/</url>
    </snapshotRepository>
    <repository>
      <id>cloudsmith</id>
      <url>https://maven.cloudsmith.io/terraframe/geoprism-registry/</url>
    </repository>
  </distributionManagement>

  <licenses>
    <license>
      <name>
        GNU Library or Lesser General Public License (LGPL)
      </name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:ssh://git@github.com/terraframe/geoprism-registry</connection>
    <developerConnection>scm:git:ssh://git@github.com/terraframe/geoprism-registry</developerConnection>
    <url>scm:git:ssh://git@github.com/terraframe/geoprism-registry</url>
    <tag>HEAD</tag>
  </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>se.bjurr.gitchangelog</groupId>
        <artifactId>git-changelog-maven-plugin</artifactId>
        <version>1.92</version>
        <inherited>false</inherited>
        <configuration>
          <file>CHANGELOG2.md</file>
          <useIntegrations>true</useIntegrations>
          <gitHubEnabled>true</gitHubEnabled>
          <gitHubApi>https://api.github.com/repos/terraframe/geoprism-registry</gitHubApi>
          <templateContent>
{{#tags}}
{{#ifReleaseTag .}}
{{#ifMatches name "${project.version}"}}
## [{{name}}](https://github.com/terraframe/geoprism-registry/releases/tag/{{name}}) ({{tagDate .}})

  {{#ifContainsType commits type='feat'}}
### Features

    {{#issues}}
      {{#commits}}
        {{#ifCommitType . type='feat'}}
 - {{#ifCommitBreaking .}}![BREAKING CHANGE](https://raw.githubusercontent.com/terraframe/geoprism-registry/master/src/build/changelog/breaking-change.png) {{/ifCommitBreaking}}{{#eachCommitScope .}}**{{.}}** {{/eachCommitScope}}{{{commitDescription .}}} {{#messageBodyItems}}{{.}}{{/messageBodyItems}} {{#hasIssue}}([{{issue}}]({{link}})){{/hasIssue}} ([{{subString hash 0 5}}](https://github.com/terraframe/geoprism-registry/commit/{{hashFull}}))
        {{/ifCommitType}}
      {{/commits}}
    {{/issues}}
  {{/ifContainsType}}

  {{#ifContainsType commits type='fix'}}
### Bug Fixes

    {{#issues}}
      {{#commits}}
        {{#ifCommitType . type='fix'}}
   - {{#ifCommitBreaking .}}![BREAKING CHANGE](https://raw.githubusercontent.com/terraframe/geoprism-registry/master/src/build/changelog/breaking-change.png) {{/ifCommitBreaking}}{{#eachCommitScope .}}**{{.}}** {{/eachCommitScope}}{{{commitDescription .}}} {{#messageBodyItems}}{{.}}{{/messageBodyItems}} {{#hasIssue}}([{{issue}}]({{link}})){{/hasIssue}} ([{{subString hash 0 5}}](https://github.com/terraframe/geoprism-registry/commit/{{hashFull}}))
        {{/ifCommitType}}
      {{/commits}}
    {{/issues}}
  {{/ifContainsType}}

{{/ifMatches}}
{{/ifReleaseTag}}
{{/tags}}
         </templateContent>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.4.2</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <version>1.8.1</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.11</version>
        <configuration>
          <header>${basedir}/LICENSE_HEADER</header>
          <excludes>
            <exclude>target/**</exclude>
            <exclude>m2-target/**</exclude>
            <exclude>**/*.properties</exclude>
            <exclude>**/*.launch</exclude>
            <exclude>**/*.vsd</exclude>
            <exclude>**/*.gitignore</exclude>
            <exclude>**/*.LESSER</exclude>
            <exclude>**/*.xls</exclude>
            <exclude>**/doc/**</exclude>
            <exclude>**/launches/**</exclude>
            <exclude>**/*.jar</exclude>
            <exclude>LICENSE_HEADER</exclude>
            <exclude>**/*.markdown</exclude>
            <exclude>**/COPYING</exclude>
            <exclude>**/logs/**</exclude>
            <exclude>**/*.png</exclude>
            <exclude>**/thirdparty/**</exclude>
            <exclude>**/yui2/**</exclude>
            <exclude>**/yui3/**</exclude>
            <exclude>**/.git/**</exclude>
            <exclude>**/ajcore*.txt</exclude>
            <exclude>**/.directory</exclude>
            <exclude>**/.keystore</exclude>
            <exclude>**/.keyStore</exclude>
            <exclude>**/*.yml</exclude>
            <exclude>**/custom-fonts/**</exclude>
            <exclude>**/node_modules/**</exclude>
            <exclude>**/typings/**</exclude>
            <exclude>**/ng2/**</exclude>
            <exclude>**/webapp/dist/**</exclude>
            <exclude>**/cldr/**</exclude>

            <!-- 3rd party library mishmashes. When we upgrade tomcat we can remove these with webjars. -->
            <exclude>**/webapp/3rd-party/**</exclude>
          </excludes>
          <properties>
            <name>${project.name}</name>
            <year>${project.inceptionYear}</year>
            <holder>Terraframe</holder>
            <contact>terraframe.com</contact>
          </properties>
          <encoding>UTF-8</encoding>
        </configuration>
        <!-- <executions> <execution> <phase>process-sources</phase> <goals> <goal>check</goal> </goals> </execution> </executions> -->
      </plugin>
      <!-- Add generated source directories -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/java-gen/base</source>
                <source>src/main/java-gen/stub</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-site-plugin</artifactId>
      <version>3.10.0</version>
    </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-project-info-reports-plugin</artifactId>
      <version>3.2.1</version>
    </plugin>        
      
    </plugins>
    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>
                      org.apache.maven.plugins
                    </groupId>
                    <artifactId>
                      maven-dependency-plugin
                    </artifactId>
                    <versionRange>[2.8,)</versionRange>
                    <goals>
                      <goal>build-classpath</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  
  <reporting>
    <plugins>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.7.2.1</version>
        <configuration>
          <fork>false</fork>
        </configuration>        
      </plugin>
    </plugins>
  </reporting>
  
</project>
